from models.Combattant import Combattant
from models.Forgeron import Forgeron
from models.Medecin import Medecin
from models.Quete import Quete
from models.Donjon import Donjon
from models.GestionnaireDeQuetes import GestionnaireDeQuetes
from models.exceptions import InsufficientFundsError, InventoryFullError, NoSuchItemError, QuestAlreadyAcceptedError, NoActiveQuestError
from view.View import View
import random
import time
from typing import Tuple

class Controller:
    """Classe principale contrôlant la logique du jeu et les interactions entre le modèle et la vue."""

    def __init__(self) -> None:
        """
        Initialise le contrôleur avec une vue, un joueur et des instances de forgeron et médecin.

        Crée également des quêtes initiales pour le joueur.
        """
        self.view: View = View()
        self.joueur: Combattant = self.creerPersonnage()
        self.forgeron: Forgeron
        self.medecin: Medecin
        self.forgeron, self.medecin = self.initialiserInstances()
        self.creerQuete(self.joueur, 2, 4)

    def initialiserInstances(self) -> Tuple[Forgeron, Medecin]:
        """
        Initialise les instances de forgeron et médecin.

        :return: Un tuple contenant le forgeron et le médecin créés.
        """
        forgeron = Forgeron("Robert")
        medecin = Medecin("Jean")
        return forgeron, medecin

    def creerQuete(self, joueur: Combattant, minQuete: int, maxQuete: int) -> None:
        """
        Crée un nombre aléatoire de quêtes pour le joueur.

        :param joueur: Le combattant pour lequel créer les quêtes.
        :param minQuete: Le nombre minimum de quêtes à créer.
        :param maxQuete: Le nombre maximum de quêtes à créer.
        """
        for _ in range(random.randint(minQuete, maxQuete)):
            GestionnaireDeQuetes.creerQueteDonjonMonstres(joueur.getNiveau())

    def creerPersonnage(self) -> Combattant:
        """
        Crée un personnage en demandant son nom via la vue.

        :return: Le combattant créé.
        """
        nomPersonnage = self.view.choixConsole("Entrez le nom de votre personnage : ")
        return Combattant(nomPersonnage)

    def afficherMenuPrincipal(self) -> None:
        """
        Affiche le menu principal et gère les choix de l'utilisateur.
        """
        while True:
            self.view.afficherMenuPrincipal()
            choix = self.view.choixConsole("Choix : ") # 1. Achats, 2. Quêtes, 3. Donjons, 4. Personnage, 5. Quitter

            if choix == "1":
                self.gestionAchats()
            elif choix == "2":
                self.gestionQuetes()
            elif choix == "3":
                self.gestionDonjons()
            elif choix == "4":
                self.gestionPersonnage()
            elif choix == "5":
                self.view.afficherMessage("Merci d'avoir joué !")
                time.sleep(2)
                break
            else:
                self.view.afficherMessage("Choix invalide. Veuillez réessayer.")
                time.sleep(1)
                
    def gestionAchats(self):
        """
        Gère l'interaction avec la boutique et les achats d'armes et potions.
        """
        self.view.afficherMessage("Vous arrivez dans la boutique.")
        while True:
            self.view.afficherMenuAchats()
            choixAchats = self.view.choixConsole("Choix : ") # 1. Forgeron, 2. Medecin, 3. Quitter

            if choixAchats == "1":
                self.gestionForgeron()
            elif choixAchats == "2":
                self.gestionMedecin()
            elif choixAchats == "3":
                self.view.afficherMessage("Vous quittez la boutique.")
                break
            else:
                self.view.afficherMessage("Choix invalide. Veuillez réessayer.")

    def gestionForgeron(self) -> None:
        """
        Gère l'interaction avec le forgeron et l'achat d'armes.
        """
        self.view.afficherMessage("Vous arrivez chez le forgeron.")
        time.sleep(1)
        self.forgeron.afficherInventaire()
        choix = self.view.choixConsole("Choix : ")
        if choix.isdigit() and int(choix) == self.forgeron.getNbArmes() + 1:
            return
        elif choix.isdigit() and (int(choix) > 0 and int(choix) <= self.forgeron.getNbArmes()):
            try:
                arme = self.forgeron.getArmeIndex(int(choix) - 1)
                self.joueur.acheterArme(self.forgeron, arme)
                self.view.afficherMessage(f"Vous avez acheté l'arme {arme.getNom()} pour {arme.getValeurOr()} or.")
                time.sleep(1)
            except (InsufficientFundsError, NoSuchItemError) as e:
                self.view.afficherMessage(str(e))
                time.sleep(1)
            except ValueError:
                self.view.afficherMessage("Choix invalide. Veuillez entrer un nombre.")
                time.sleep(1)
        else:
            self.view.afficherMessage("Choix invalide.")
            time.sleep(1)

    def gestionMedecin(self) -> None:
        """
        Gère l'interaction avec le médecin et l'achat de potions.
        """
        self.view.afficherMessage("Vous arrivez chez le médecin.")
        time.sleep(1)
        self.view.afficherMessage(self.medecin.afficherStockPotions())
        choix = self.view.choixConsole("Choix : ")
        if choix.isdigit() and int(choix) == 0:
            return
        elif choix.isdigit() and (int(choix) > 0 and int(choix) <= self.medecin.getStockPotions()):
            nbAchetes = 0
            for _ in range(int(choix)):
                try:
                    self.joueur.acheterPotion(self.medecin)
                    nbAchetes += 1
                except (InsufficientFundsError, NoSuchItemError, InventoryFullError) as e:
                    self.view.afficherMessage(str(e))
                    time.sleep(1)
                    break
            self.view.afficherMessage(f"Vous avez acheté {nbAchetes} potions.")
            time.sleep(1)
        else:
            self.view.afficherMessage("Choix invalide.")
            time.sleep(1)

    def gestionQuetes(self) -> None:
        """
        Gère l'affichage et l'acceptation des quêtes par le joueur.
        """
        self.view.afficherMessage(Quete.afficherToutesLesQuetesEnCours())
        choix = self.view.choixConsole("Choix d'une quête à accepter : ")
        if choix.isdigit() and int(choix) == Quete.getNbQuetesEnCours() + 1:
            return
        elif choix.isdigit() and (int(choix) > 0 and int(choix) <= Quete.getNbQuetesEnCours()):
            try:
                quete = Quete.getQueteIndexEnCours(int(choix) - 1)
                self.joueur.accepterQuete(quete)
                self.view.afficherMessage(f"Vous avez accepté la quête {quete.getNom()}.")
                time.sleep(1)
            except (QuestAlreadyAcceptedError, IndexError) as e:
                self.view.afficherMessage(str(e))
                time.sleep(1)
            except ValueError:
                self.view.afficherMessage("Choix invalide. Veuillez entrer un nombre.")
                time.sleep(1)
        else:
            self.view.afficherMessage("Choix invalide. Veuillez réessayer.")
            time.sleep(1)

    def gestionDonjons(self) -> None:
        """
        Gère l'exploration des donjons et les combats avec les monstres.
    
        Sort du donjon immédiatement si le joueur choisit de fuir un combat.
        """
        self.view.afficherMessage(Donjon.afficherTousLesDonjonsActifs())
        choix = self.view.choixConsole("Choix d'un donjon à explorer : ")
        if choix.isdigit() and int(choix) >= Donjon.nbDonjons: # Sortie du donjon #0 : Quitter
            return
        elif choix.isdigit() and (int(choix) > 0 and int(choix) <= Donjon.nbDonjons): 
            donjon = Donjon.getDonjonIndexActif(int(choix) - 1)
            self.view.afficherMessage(f"Vous entrez dans le {donjon.getNom()}.")
            time.sleep(1)
            while not donjon.estVide(): # Sortie du donjon #1 : Donjon vidé
                monstre = donjon.getMonstreAleatoire()
                self.view.afficherMessage(f"Vous rencontrez un {monstre.getNom()} !")
                time.sleep(1)
                self.view.afficherMessage(f"Vous avez {self.joueur.getVie()} points de vie.")
                time.sleep(0.5)
                self.view.afficherMessage(f"Le {monstre.getNom()} a {monstre.getVie()} points de vie.")
                time.sleep(1)
                fuite = False  # Indicateur pour savoir si le joueur a fui
                while not self.joueur.estMort() and not monstre.estMort() and not fuite: # Boucle de combat
                    choix = self.view.choixConsole("1. Attaquer\n2. Boire une potion\n3. Fuir\nChoix : ")
                    if choix == "1":
                        self.view.afficherMessage(f"Vous attaquez {monstre.getNom()} !")
                        self.joueur.attaquer(monstre)
                        time.sleep(1)
                        self.view.afficherMessage(f"Le {monstre.getNom()} a {monstre.getVie()} points de vie.")
                        time.sleep(1)
                        if not monstre.estMort():
                            self.view.afficherMessage(f"{monstre.getNom()} vous attaque !")
                            monstre.attaquer(self.joueur)
                            time.sleep(1)
                            self.view.afficherMessage(f"Vous avez {self.joueur.getVie()} points de vie.")
                            time.sleep(1)
                    elif choix == "2":
                        try:
                            self.joueur.boirePotion()
                            self.view.afficherMessage("Vous avez bu une potion.")
                            time.sleep(1)
                        except NoSuchItemError as e:
                            self.view.afficherMessage(str(e))
                            time.sleep(1)
                    elif choix == "3":
                        self.view.afficherMessage("Vous avez fui.")
                        time.sleep(1)
                        fuite = True
                        break # Sortie du donjon #2 : Fuite du combat et donjon
                    else:
                        self.view.afficherMessage("Choix invalide. Veuillez réessayer.")
                        time.sleep(1)
                        continue
                if fuite: 
                    break # Sortie du donjon #3 : Fuite du combat et donjon
                if self.joueur.estMort():
                    messages = self.joueur.resetApresMort()
                    for message in messages:
                        self.view.afficherMessage(message)
                        time.sleep(0.5)
                    break # Sortie du donjon #4 : Mort du joueur
                elif monstre.estMort():
                    messages = self.joueur.battreMonstre(monstre, donjon)
                    for message in messages:
                        if message.startswith("Félicitations ! Vous avez terminé la") or message.startswith("Félicitations ! Vous avez atteint le niveau"):
                            self.creerQuete(self.joueur, 1, 2) # Création de nouvelles quêtes (entre 1 et 2) après avoir fini une quête ou monté de niveau
                        self.view.afficherMessage(message)
                        time.sleep(0.5)
            if donjon.estVide():
                self.creerQuete(self.joueur, 1, 2) # Création de nouvelles quêtes (entre 1 et 2) après avoir vidé un donjon
                self.view.afficherMessage(f"Vous avez vidé le {donjon.getNom()} ! Retour au village.")
                time.sleep(1)
        else:
            self.view.afficherMessage("Choix invalide. Veuillez réessayer.")
            time.sleep(1)
    def gestionPersonnage(self) -> None:
        """
        Gère les actions liées au personnage, comme équiper une arme ou abandonner une quête.
        """
        while True:
            self.view.afficherMessage(str(self.joueur))
            self.view.afficherMenuPersonnage()
            choix = self.view.choixConsole("Choix : ")
            if choix == "1":
                self.view.afficherMessage(self.joueur.afficherArmes())
                choix = self.view.choixConsole("Choix d'arme à porter : ")
                if choix.isdigit() and int(choix) == self.joueur.getNbArmesInventaire() + 1:
                    break
                elif choix.isdigit():
                    try:
                        arme = self.joueur.getArmeIndexInventaire(int(choix) - 1)
                        self.joueur.equiperArme(arme)
                        self.view.afficherMessage(f"Vous avez équipé l'arme {arme.getNom()}.")
                        time.sleep(1)
                    except (NoSuchItemError, IndexError) as e:
                        self.view.afficherMessage(str(e))
                        time.sleep(1)
                    except ValueError:
                        self.view.afficherMessage("Choix invalide. Veuillez entrer un nombre.")
                        time.sleep(1)
            elif choix == "2":
                try:
                    self.joueur.abandonnerQuete()
                    self.view.afficherMessage("Vous avez abandonné la quête.")
                    time.sleep(1)
                except NoActiveQuestError as e:
                    self.view.afficherMessage(str(e))
                    time.sleep(1)
            elif choix == "3":
                break
            else:
                self.view.afficherMessage("Choix invalide. Veuillez réessayer.")
                time.sleep(1)